--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
     "semantic-ui": "^2.3.0",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "^0.78.2",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
